<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flashcards</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Willkommen</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="kategorien">Kategorie</string>
    <string name="title_activity_edit_list_set">EditListSetActivity</string>
    <string name="ok_button">OK</string>
    <string name="lernen">Lernen</string>
    <string name="myflashcards">Myflashcards</string>
    <string name="hinzufuegen">Hinzufügen</string>
    <string name="entfernen">entfernen</string>
    <string name="back">zurück</string>
    <string name="title_activity_add_katergory_activity2">AddKatergoryActivity2</string>
    <string name="kategory_choose">Bitte Kategorie wählen</string>
    <string name="title_activity_remove_kat">RemoveKatActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="question_choose">Frage formulieren</string>
    <string name="question_text">Fragetext</string>
    <string name="question_do">Frage erstellen</string>
    <string name="foto_gallery">Foto aus Gallerie</string>
    <string name="foto_shoot">Foto aufnehmen</string>
    <string name="foto_choose">Foto wählen</string>
    <string name="title_activity_foto_gallery">FotoGalleryActivity</string>
    <string name="title_activity_foto_shoot">FotoShootActivity</string>

</resources>
